--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "element-ui": "^2.15.0",
     "js-cookie": "^3.0.1",
     "vue": "^2.6.11",
