--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "element-ui": "^2.15.0",
     "js-cookie": "^3.0.1",
+    "marked": "^4.0.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
